# datasetpro

./: .gitignore  README.md  Tabla comparativa.md  main.py  pyproject.toml
notebooks/: colab_runner.ipynb
scripts/: 01_descargar_ffhq.py  01_download_ffhq.py  02_generar_swaps.py  02_generate_swaps.py  03_generar_inpainting.py  03_generate_inpainting.py  04_generar_mascaras.py  04_generar_sintesis.py  04_generar_sintesis_v2.py  04_generate_masks.py  05_build_hdf5.py  05_ensamblar_dataset.py  05_generar_reenactment.py  06_generar_mascaras.py  06_verify_dataset.py  07_ensamblar_dataset.py  07_generar_sintesis.py  08_generar_reenactment.py  08_verificar_dataset.py  imprimir_tabla.py
src/: face_parsing_mask.py
