[project]
name = "datasetpro"
version = "0.1.0"
description = "Construcción de dataset para DeepShield"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.33.0",
    "albumentations>=1.4.0",
    "diffusers>=0.30.0",
    "h5py>=3.11.0",
    "insightface>=0.7.3",
    "numpy>=1.26.0",
    "onnxruntime-gpu>=1.19.0",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=10.4.0",
    "scikit-learn>=1.5.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "tqdm>=4.66.0",
    "transformers>=4.44.0",
    "kaggle>=2.1.0",
    "torch-fidelity>=0.4.0",
    "huggingface-hub>=1.12.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cuda", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
